# Slicer-Featurelets-Extension

./: .gitignore  CMakeLists.txt  README.md
Featurelets-Registration/: CMakeLists.txt  qSlicerRegistrationModule.cxx  qSlicerRegistrationModule.h  qSlicerRegistrationModuleWidget.cxx  qSlicerRegistrationModuleWidget.h
Featurelets-Registration/Backup/: qSlicerRegistrationModuleWidget.cxx  qSlicerRegistrationModuleWidget.h
Featurelets-Registration/Backup/Logic - Compiling Version/: CommandIterationUpdate.h  DeformationFieldGenerator.h  FeatureletRegistrationResult.h  vtkSlicerRegistrationLogic.cxx  vtkSlicerRegistrationLogic.h
Featurelets-Registration/Backup/Logic - with regImage/: CommandIterationUpdate.h  DeformationFieldGenerator.h  FeatureletRegistrationResult.h  RegisterVolumes.cpp  RegisterVolumes.h  ResampleVolume.cpp  ResampleVolume.h  regImage.cpp  regImage.h  subsampleFeut.h  vtkSlicerRegistrationLogic.cxx  vtkSlicerRegistrationLogic.h
Featurelets-Registration/Backup/Logic - without regImage/: CommandIterationUpdate.h  DeformationFieldGenerator.h  FeatureletRegistrationResult.h  ResampleVolume.cpp  ResampleVolume.h  subsampleFeut.cpp  vtkSlicerRegistrationLogic.cxx  (+1 more)
Featurelets-Registration/Logic/: CMakeLists.txt  CommandIterationUpdate.h  DeformationFieldGenerator.h  FeatureletRegistrationResult.h  vtkSlicerRegistrationLogic.cxx  vtkSlicerRegistrationLogic.h
Featurelets-Registration/MRML/: CMakeLists.txt  vtkMRMLRegistrationNode.cxx  vtkMRMLRegistrationNode.h
Featurelets-Registration/Resources/: qSlicerRegistrationModule.qrc
(+9 files in other folders)
